replace singleton list with list of